--- a/src/app/pages/ncs/import-json/import-json.component.html
+++ b/src/app/pages/ncs/import-json/import-json.component.html
@@ -1,4 +1,7 @@
 <p-toast></p-toast>
+
+<button class="btn btn-dark inicio">Inicio</button>
+
 <h1>Importar Clientes</h1>
 <p-fileUpload
   (uploadHandler)="onUpload($event, 'customer')"
