--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
@@ -9,15 +9,15 @@
 
   <div class="editar-campo">
     <label for="">Nome</label>
-    <input type="text" [(ngModel)]="editarNomeItem" />
+    <input type="text" [(ngModel)]="nonComplicanceService.editarNomeItem" />
   </div>
   <div class="editar-campo">
     <label for="">Telefone</label>
-    <input type="text" [(ngModel)]="editarTelefoneItem" />
+    <input type="text" [(ngModel)]="nonComplicanceService.editarTelefoneItem" />
   </div>
   <div class="editar-campo">
     <label for="">E-mail</label>
-    <input type="text" [(ngModel)]="editarEmailItem" />
+    <input type="text" [(ngModel)]="nonComplicanceService.editarEmailItem" />
   </div>
   <div class="d-flex justify-content-end editar-buttons">
     <button type="button" class="btn btn-outline-dark" (click)="hideDialog()">
