--- a/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint.component.html
+++ b/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint.component.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="dropdown">
-          <select [(ngModel)]="nonComplicanceService.nc.tipo_controle">
+          <select (change)="limparCampos()" [(ngModel)]="nonComplicanceService.nc.tipo_controle">
             <option value="" disabled selected hidden>Selecione...</option>
             <option *ngFor="let op of controleOptions">
               {{ op }}
