--- a/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point-items/rejection-point-items.component.html
+++ b/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point-items/rejection-point-items.component.html
@@ -67,7 +67,7 @@
     </div>
   </div>
 
-  <div class="d-flex justify-content-center mt-3">
+  <div *ngIf="false" class="d-flex justify-content-center mt-3">
     <button
       class="btn btn-dark"
       (click)="visualizarIt()"
