--- a/src/app/pages/ncs/create/steps/step3/contacts.component.html
+++ b/src/app/pages/ncs/create/steps/step3/contacts.component.html
@@ -14,7 +14,7 @@
     <button iconPos="right" class="btn btn-dark" (click)="showAddContacts()">
       Adicionar Contato<i class="pi pi-plus"></i>
     </button>
-  </div>
+  </div>z
 </div>
 
 <div class="card">
