hotfix: ajeita layout revisar info nc

--- a/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
@@ -154,11 +154,11 @@
   <p-divider layout="vertical"></p-divider>
   <div class="dados-parceiro razao-social item">
     <h2 class="mr-2 mb-5">
-      <i class="pi pi-camera"></i>
-      Evidencias fotográficas
+      <i class="bi bi-paperclip"></i>
+      Evidências
     </h2>
     <p-carousel
-      [value]="returnFile('evidenciasNc')"
+      [value]="returnFile('pontoControle')"
       [numVisible]="3"
       [numScroll]="3"
       [showIndicators]="false"
@@ -187,8 +187,8 @@
   <p-divider layout="vertical"></p-divider>
   <div class="dados-parceiro razao-social item">
     <h2 class="mr-2 mb-5">
-      <i class="pi pi-camera"></i>
-      Evidencias fotográficas
+      <i class="bi bi-paperclip"></i>
+      Evidências
     </h2>
     <p-carousel
       [value]="returnFile('evidenciasAcoes')"
