correção do interceptor e do toast

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
+
 <div *ngIf="isLoggedIn">
   <app-bootstrap></app-bootstrap>
 </div>
 
 <div *ngIf="!isLoggedIn">
   <app-login></app-login>
+
 </div>
+<p-toast position="bottom-center"></p-toast>
