--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,4 +1,4 @@
-/* * {
+* {
     margin: 0;
     box-sizing: border-box;
   }
@@ -287,4 +287,4 @@
     font-size: 15px;
     margin-top: 10px;
     float:right
-} */
+}
