--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<!-- 
+
 
   <span>Digite seu e-mail:</span>
   <br>
@@ -32,13 +32,13 @@
 
 </p-autoComplete>
 <button (click)="sendMailForUser()" class="btn btn-primary-color">Cadastrar </button>
-   -->
+  
 
 
 
 
 
-  <form
+  <!-- <form
   *ngIf="!isSuccessful"
   name="form"
   (ngSubmit)="f.form.valid && onSubmit()"
@@ -101,5 +101,5 @@
   <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
     Signup failed!<br />{{ errorMessage }}
   </div>
-</form>
+</form> -->
 
